# sirenwm

./: .gitignore  .uncrustify.cfg  ARCHITECTURE.md  CMakeLists.txt  CONFIG.md  CONTRIBUTING.md  README.md  init.lua.default  init.lua.example
.github/ISSUE_TEMPLATE/: bug_report.md  config_question.md  feature_request.md
.github/actions/build-and-test/: action.yml
.github/workflows/: _checks.yml  build-wayland.yml  build.yml
backends/wayland/: backend.cmake
backends/wayland/include/: display_server_backend.hpp  display_server_ports.hpp  wl_backend.hpp  wl_backend_obj.hpp  wl_compat.hpp  wl_cpu_buffer.hpp  wl_display.hpp  wl_keyboard.hpp  wl_layer_shell.hpp  wl_listener.hpp  wl_output.hpp  wl_ports.hpp  wl_renderer.hpp  wl_scene_graph.hpp  wl_seat.hpp  wl_surface.hpp  wl_xdg_shell.hpp
backends/wayland/src/: backend.cpp  input_port.cpp  keyboard_port.cpp  loop.cpp  monitor_port.cpp  render_port.cpp  wl_backend_obj.cpp  wl_cpu_buffer.cpp  wl_display.cpp  wl_keyboard.cpp  wl_layer_shell.cpp  wl_output.cpp  wl_renderer.cpp  wl_scene_graph.cpp  wl_seat.cpp  wl_surface.cpp  wl_xdg_shell.cpp  xdg_shell.cpp
backends/x11/: backend.cmake
backends/x11/include/: x11_atoms.hpp  x11_backend.hpp  x11_ports.hpp  x11_window.hpp  xconn.hpp
backends/x11/src/: adopt.cpp  backend.cpp  events.cpp  ewmh.cpp  gl_port.cpp  input_port.cpp  keyboard_port.cpp  loop.cpp  tray_host.cpp  (+5 more)
cmake/: SirenwmModule.cmake  SwmModule.cmake  sirenwm.desktop.in
core/include/: bar_config.hpp  config.hpp  config_loader.hpp  config_types.hpp  core.hpp  core_config.hpp  event_emitter.hpp  event_loop.hpp  event_queue.hpp  event_receiver.hpp  hook_registry.hpp  layout.hpp  log.hpp  lua_events.hpp  lua_helpers.hpp  lua_host.hpp  message.hpp  module.hpp  module_registry.hpp  monitor.hpp  monitor_layout.hpp  pointer_registry.hpp  restart_state.hpp  runtime.hpp  runtime_config.hpp  runtime_state.hpp  runtime_store.hpp  surface.hpp  window.hpp  window_state.hpp  ws.hpp
core/src/: config.cpp  config_loader.cpp  lua_host.cpp  module.cpp  monitor_layout.cpp  runtime_store.cpp
libipc/: CMakeLists.txt
libipc/src/: channel.cpp  endpoint.cpp  shared_buffer.cpp
libwl/: CMakeLists.txt
libwl/include/wl/: client_display.hpp  display.hpp  event_loop.hpp  global.hpp  listener.hpp  protocol.hpp  proxy.hpp  registry.hpp  shm_buffer.hpp  wl.hpp
libwl/src/: display.cpp  event_loop.cpp  shm_buffer.cpp
libwl/tests/: smoke_test.cpp
libwlproto/: CMakeLists.txt
libwlproto/cmake/: AddWlProtocol.cmake
libwlproto/protocols/: sirenwm-server-v1.xml
libwlproto/scripts/: generate_wl_wrappers.py
libwlserver/: CMakeLists.txt
libwlserver/cmake/: AddWlProtocol.cmake
libwlserver/include/wl/: display.hpp  event_loop.hpp  global.hpp
libwlserver/include/wl/server/: admin.hpp  compositor.hpp  output.hpp  output_x11.hpp  overlay_manager.hpp  seat.hpp  shm.hpp  surface_id.hpp  xdg_decoration.hpp  xdg_shell.hpp  xwayland.hpp  xwayland_shell.hpp  xwm.hpp
libwlserver/include/wl/server/ipc/: backend_control_server.hpp
libwlserver/include/wl/server/protocol/: compositor.hpp  seat.hpp  shm.hpp  surface_id.hpp  xdg_decoration.hpp  xdg_shell.hpp
libwlserver/include/wl/server/runtime/: display_server.hpp  display_state.hpp  overlay_manager.hpp
libwlserver/include/wl/server/x11/: output_x11.hpp  xwayland.hpp  xwayland_shell.hpp  xwm.hpp
libwlserver/src/: admin.cpp  compositor.cpp  display_server.cpp  output.cpp  output_x11.cpp  overlay_manager.cpp  seat.cpp  shm.cpp  xdg_decoration.cpp  xdg_shell.cpp  xwayland.cpp  xwayland_shell.cpp  xwm.cpp
libwlserver/src/ipc/: backend_control_server.cpp
libwlserver/src/protocol/: compositor.cpp  output.cpp  seat.cpp  shm.cpp  xdg_decoration.cpp  xdg_shell.cpp
libwlserver/src/runtime/: display_server.cpp  display_state.cpp  overlay_manager.cpp
libwlserver/src/support/: wl_display.cpp  wl_event_loop.cpp
libwlserver/src/x11/: output_x11.cpp  xwayland.cpp  xwayland_shell.cpp  xwm.cpp
libxcb/: CMakeLists.txt
libxcb/include/xcb/: atom.hpp  atom_registry.hpp  connection.hpp  event_dispatch.hpp  property.hpp  randr.hpp  reply.hpp  visual.hpp  xconnection.hpp
libxcb/src/: connection.cpp  visual.cpp  xconnection.cpp
lua/swm/: autostart.lua  base.lua  module.lua  rules.lua  wallpaper.lua  widget.lua
modules/: CMakeLists.txt
modules/audio/: audio_module.cpp  audio_module.hpp  module.cmake
modules/bar/: bar_module.cpp  bar_module.hpp  bar_module_core.cpp  bar_state.hpp  module.cmake
modules/debug_ui/: debug_ui_module.cpp  module.cmake
modules/keybindings/: keybindings.cpp  keybindings.hpp  module.cmake
modules/keyboard/: keyboard_module.cpp  keyboard_module.hpp  module.cmake
modules/layout/: layout_module.cpp  layout_module.hpp  module.cmake
modules/monitor/: module.cmake  monitor.cpp  monitor.hpp
modules/process/: module.cmake  process_module.cpp  process_module.hpp
modules/rules/: module.cmake  rules.cpp  rules.hpp
modules/sysinfo/: module.cmake  sysinfo_module.cpp  sysinfo_module.hpp
modules/wallpaper/: module.cmake  wallpaper.cpp  wallpaper.hpp
src/: main.cpp
src/process/: child_process_registry.cpp  child_process_registry.hpp
tests/: core_harness.hpp  fake_backend.cpp  fake_backend.hpp  test_backend_effects.cpp  test_focus.cpp  test_harness.hpp  test_hotplug.cpp  test_layout.cpp  test_reload.cpp  test_rules.cpp  test_window_lifecycle.cpp  test_workspace.cpp
tests/ci/: check_architecture_boundaries.sh
tests/core/: test_backend_effects.cpp  test_configure_notify.cpp  test_cross_monitor.cpp  test_edge_cases.cpp  test_focus.cpp  test_fullscreen_stacking.cpp  test_hotplug.cpp  test_layout.cpp  test_main.cpp  test_multi_monitor_focus.cpp  test_reload.cpp  test_rules.cpp  test_size_hints.cpp  test_strong_id.cpp  test_window_lifecycle.cpp  test_workspace.cpp
tests/gtest/: gtest.h
tests/integration/: run_all.sh  run_tests.sh  run_tests_wayland.sh
tests/libipc/: ipc_test_harness.hpp  test_protocol.cpp
tests/modules/: test_bar.cpp  test_keybindings.cpp  test_keyboard.cpp  test_main.cpp  test_sysinfo.cpp
tests/runtime/: test_main.cpp  test_rules.cpp
(+110 files in other folders)
